--- a/app/views/students/show_praxis.html.erb
+++ b/app/views/students/show_praxis.html.erb
@@ -26,9 +26,11 @@
     </tr>
 
         <td>
+          <!-- table for subtests -->
           <table>
-            <%=
+            <%=result.praxis_subtest_results.each do |sub| %>
 
+          <% end %>            
           </table>
         </td>
     <% end %>
