--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,34 @@
 	</head>
 	<body>
 
-		<!--Before yield -->
+	<div id="header"> 
 
+    <div class="top_banner">
+    	Loged in as: ____
+
+    </div>
+ 
+  </div>
+
+    <div class="navigation">
+      <ul>
+        <li><a href="#">Option</a></li>
+        <li><a href="#">Option</a></li>
+        <li><a href="#">Option</a></li>
+        <li><a href="#">Option</a></li>
+        <li><a href="#">Option</a></li>
+        <li><a href="#">Option</a></li>
+        <li><a href="#">Option</a></li>
+        <li><a href="#">Option</a></li>
+      </ul>
+    </div>
+
+		<!--Before yield -->
+      <% if !flash[:notice].blank? %>
+        <div class="notice">
+          <%= flash[:notice] %>
+        </div>
+      <% end %>
 	<%= yield %>
 	
 		<!--After yield -->
