--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 	<head>
 	  <title>Education Studies Dashboard</title>
 	  <%= stylesheet_link_tag('application') %>
+    <%= javascript_include_tag :defaults %>
 	</head>
 	<body>
 
