--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -1,37 +1,60 @@
 
 
-<%= link_to("<< Back to List", {:controller => 'students', :action => 'index', :id => params[:id], :class => 'back-link'}) %>
+<%= link_to("<< Back", {:controller => 'students', :action => 'index', :id => params[:id]}, :class => 'back-link') %>
 <div class="index">
-
-  <table class="listing" summary="issues list">
-    <caption>   
       <h2>Issues for <%= "#{@first_name} #{@last_name}"%></h2>
 
-      <div> <%= pluralize(@student.issues.size, 'issue') %>  found </div>
 
-    </caption>
+      <div class="issue_header"> <%= pluralize(@student.issues.size, 'issue') %>  found
+      <%= link_to(image_tag('plus_sign.png', :size => '11x11', :alt => '+') + " Open New Issue", {:action => 'new', :id => @student.Bnum}, :class => 'large_action issue_new new') %>
+      </div>
 
-    <tr class="header">
-      <th>Issue Name</th>
-      <th>Date Opened</th>
-      <th>Status</th>
-    </tr>
-    <% @student.issues.each do |issue| %>
-    <tr class "<%= cycle('odd', 'even') %>">
-	  <td><%= issue.Name %></td>
-	  <td><%= issue.CreateDate.strftime("%m/%d/%Y")%> </td>
-	  <td><%= issue.Open %></td>
-     <td class="actions">
-            <%= link_to("Updates", "http://www.berea.edu", :class => 'action show') %>
+    </br>
 
-    </tr>
+    <% if @student.issues.size > 0 %>
 
-    <tr>
-    	<td class="full_span"><%= issue.Description %> </td>
+        <% @student.issues.sorted.each do |issue| %>
+          <table summary="Student detail view">
 
-    </tr>
+            <tr>
+              <th>Issue Name</th>
+              <td><%= issue.Name %></td>
+            </tr>
+
+            <tr>
+              <th>Status</th>
+              <td class="<%= issue.Open ? "bad_text" : "good_text" %>"><%= issue.Open ? "open" : "closed" %>
+              </td>
+            </tr>
+
+            <tr>
+              <th>Date Opened</th>
+              <td><%= issue.CreateDate.strftime("%m/%d/%Y")%> </td>
+            </tr>
+
+            <tr>
+              <th></th>
+              <td><%= link_to("Updates (#{issue.issue_updates.size})", issue_issue_updates_path(issue.IssueID), :class => 'action show') %> 
+              <% if issue.Open %>
+                  <%= link_to("Close issue", resolve_issue_issue_issue_updates_path(issue.IssueID), :class => "action edit") %>
+              <% end %>
+              </td>
+
+            </tr>
+          </table>
+
+          <p class="issue_discrip">
+
+          <%= issue.Description %>
+          </p>
+          <% end %>
 
     <% end %>
 
-  </table>
+
+
+
+
 </div>
+
+{:controller => "issue_updates", :action => 'resolve_issue', :id => issue.IssueID} 
