--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to("<< Back to List", {:action => 'index'}, :class => 'back-link') %>
+<%= link_to("<< Back", {:action => 'index'}, :class => 'back-link') %>
 
 <div class="students show">
   <h2>Student Details</h2>
