--- a/app/views/praxis_results/index.html.erb
+++ b/app/views/praxis_results/index.html.erb
@@ -27,7 +27,7 @@
           <td><%= result.BestScore %></td>   
       	  <td><%= result.CutScore %></td>
            <td class="actions">
-                  <%= link_to("Details", praxis_result_path(result.TestID), :class => 'action show') %>
+              <%= link_to("Details", praxis_result_path(result.AltID), :class => "action details") %>
 
           </tr>
 
