--- a/app/views/praxis_results/show.html.erb
+++ b/app/views/praxis_results/show.html.erb
@@ -1,5 +1,5 @@
 
-<%= link_to("<< Back", student_praxis_results_path(@student.Bnum), :class => 'back-link') %>
+<%= link_to("<< Back", student_praxis_results_path(@student.AltID), :class => 'back-link') %>
 
 <div class="test details show">
 
