--- a/app/views/issues/resolve_issue.html.erb
+++ b/app/views/issues/resolve_issue.html.erb
@@ -1,7 +1,4 @@
-here is issues#resolve_issue!
-<%= params %>
-
-<%= link_to("<< Back", student_issues_path(@student.Bnum), :class => 'back-link') %>
+<%= link_to("<< Back", student_issues_path(@student.AltID), :class => 'back-link') %>
 
 <div class="issue_update edit">
 
