--- a/app/views/issue_updates/resolve_issue.html.erb
+++ b/app/views/issue_updates/resolve_issue.html.erb
@@ -1,30 +1,2 @@
-here is resolve_issue
-<%= params %>
-
-<%= link_to("<< Back", {:conroller => :issue, :action => 'show', :id => @student.Bnum}, :class => 'back-link') %>
-
-<div class="issue_update edit">
-
-	<%= form_for(:issue_update, :url => {:action => :close_issue, :id => @issue.IssueID} ) do |f| %>
-	<h2>Close Issue for <%=[@first_name, @last_name].join(' ')%></h2>
-  	<%= error_messages_for(@update) %>
-
-	<table summary="Issue form fields">
-
-	  <tr>
-	    <th><%= f.label(:Description, "Please provide informtation on why this issue is being closed.") %> </th>
-	    <td><%= f.text_area(:Description, :size => '30x10') %></td>
-	  </tr>
-
-	<tr>
-	<th></th>
-	<td>
-    <div class="form-buttons">
-      <%= submit_tag("Close Issue") %>
-	</td>
-	</tr>
-    </div>	
-	</table>
-	<% end %>
-
-</div>
+Issue_updates#resolve_issue
+OOPS! Content was deleted! I thought it wasn't needed and something is calling it!
