--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,14 +12,17 @@
     <div class="top_banner">
     	Loged in as: ____
 
+
     </div>
  
   </div>
 
     <div class="navigation">
       <ul>
-        <li><a href="#">Option</a></li>
-        <li><a href="#">Option</a></li>
+        <li><%= link_to("Advisees", students_path) %></li>
+        <li><%= link_to("TEP Applications", 
+        banner_term_adm_tep_index_path(current_term(exact=false).BannerTerm)
+        ) %></li>
         <li><a href="#">Option</a></li>
         <li><a href="#">Option</a></li>
         <li><a href="#">Option</a></li>
